ENH:itk.org changes

--- a/Documentation/README.html
+++ b/Documentation/README.html
@@ -13,7 +13,7 @@
     <tr valign="Top">
       <td align="Left">
       <h1>
-      <a href="http://public.kitware.com/Insight">
+      <a href="http://www.itk.org">
       <img src="./Art/itkLogoMediumTransparentBackground.gif" 
       alt="ITK Logo" width="200" height="128" align="left" border=0></a>
       </h1>
@@ -29,7 +29,7 @@
 <h2>Basic Information</h2>
 Please refer to
 <a href="../README.html">README.html</a> for an introduction to ITK. Or see
-the <a href="http://public.kitware.com/Insight">Insight Web pages</a>.
+the <a href="http://www.itk.org">Insight Web pages</a>.
 
 <p>
 This directory contains only a limited subset of the total ITK documentation.
