--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
     <tr valign="Top">
       <td align="Center">
       <h1>
-      <a href="http://public.kitware.com/Insight">
+      <a href="http://www.itk.org">
       <img src="./Documentation/Art/itkLogoMediumTransparentBackground.gif" 
       alt="ITK Logo" width="200" height="128" align="Top" border=0></a>
       </h1>
@@ -31,7 +31,7 @@ This document provides a brief description of the project, its history, and
 references to additional information describing how to use, develop, and
 contribute to ITK. <br>
 <h2>Introduction</h2>
-<h3>What is <a href="http://public.kitware.com/Insight">ITK</a>?</h3>
+<h3>What is <a href="http://www.itk.org">ITK</a>?</h3>
 ITK is an open-source software toolkit for performing registration and segmentation.
 Segmentation is the process of identifying and classifying data found in
 a digitally sampled representation. Typically the sampled representation
@@ -205,7 +205,7 @@ environment.<br>
 Insight supports an extensive testing environment. The code is tested daily
 on many hardware/operating system/compiler combinations and the results are
 posted daily on the 
-<a href="http://public.kitware.com/Insight/Testing/HTML/TestingResults/Dashboard/MostRecentResults-Nightly/Dashboard.html">Insight Quality Dashboard<a>.
+<a href="http://www.itk.org/Testing/HTML/TestingResults/Dashboard/MostRecentResults-Nightly/Dashboard.html">Insight Quality Dashboard<a>.
 <br>
 <h3>Background References </h3>
 <h4>C++ Patterns and Generics</h4>
@@ -222,10 +222,10 @@ by Matthew H. Austern </li>
 
 <h2>FURTHER INFORMATION</h2>
 Refer to the 
-<a href="http://public.kitware.com/Insight">Insight homepage</a>
+<a href="http://www.itk.org">Insight homepage</a>
 for more information.
 Also, grab the code from the
-<a href="http://public.kitware.com/Insight/Web/HTML/Download.htm">
+<a href="http://www.itk.org/Web/HTML/Download.htm">
 Insight CVS repository</a>. To download Insight using CVS, use the 
 following procedure:<br> 
 <pre>   cvs -d :pserver:anonymous@public.kitware.com:/insight/cvsroot login</pre>
