--- a/Documentation/README.html
+++ b/Documentation/README.html
@@ -46,10 +46,10 @@ checkout directory (InsightDocuments). While this is not complete, you
 may find useful information (including a coding style document).
 If you would like to access this directory, use the following procedure:
 
-<pre>   cvs -d :pserver:anonymous@public.kitware.com:/insight/cvsroot login</pre>
+<pre>   cvs -d :pserver:anonymous@www.itk.org:/insight/cvsroot login</pre>
 with password "insight"...then get the source/documentation as follows:<br>
 <br>
-<pre>   cvs -d :pserver:anonymous@public.kitware.com:/insight/cvsroot checkout InsightDocuments</pre>
+<pre>   cvs -d :pserver:anonymous@www.itk.org:/insight/cvsroot checkout InsightDocuments</pre>
 
 </body>
 </html>
