ENH:Spiffing up documentation for beta

--- a/Documentation/README.html
+++ b/Documentation/README.html
@@ -28,7 +28,7 @@
 
 <h2>Basic Information</h2>
 Please refer to
-<a href="../README.html">README.html</a> for an introduction to ITK. Or see
+<a href="../README.html">../README.html</a> for an introduction to ITK. Or see
 the <a href="http://www.itk.org">Insight Web pages</a>.
 
 <p>
