ENH:Spiffing up documentation for beta

--- a/Documentation/README.html
+++ b/Documentation/README.html
@@ -35,8 +35,8 @@ the <a href="http://www.itk.org">Insight Web pages</a>.
 This directory contains only a limited subset of the total ITK documentation.
 The directory contents include:
 <ul>
-    <li>InsightStart.pdf - retrieving the code, mailing lists, web pages,
-    the basics of compiling.</li>
+    <li>InsightStart.pdf - developers guide to retrieving the code, 
+    mailing lists, web pages, the basics of compiling.</li>
     <li>Installing&Compiling.htm - the basics of compiling ITK on different
     platforms.</li>
 </ul>
