--- a/README.html
+++ b/README.html
@@ -262,6 +262,11 @@ by Matthew H. Austern </li>
   ITK are simple, mainly undocumented examples of how to use the code.</li>
   </ol>
 
+  <h3>Data</h3>
+  Data is available via anonymous ftp from: 
+  <a href="ftp://public.kitware.com/pub/itk/Data/">
+  ftp://public.kitware.com/pub/itk/Data/</a>.
+
   <h3>Contacts</h3>
   <ul>
     <li>Terry Yoo (NLM/NIH Insight Project Manager yoo@fluorite.nlm.nih.gov)</li>
