ENH:Spiffing up documentation for beta

--- a/Documentation/README.html
+++ b/Documentation/README.html
@@ -28,15 +28,15 @@
 
 <h2>Basic Information</h2>
 Please refer to
-<a href="../README.html">README.html</a> for an introduction to ITK. Or see
+<a href="../README.html">../README.html</a> for an introduction to ITK. Or see
 the <a href="http://www.itk.org">Insight Web pages</a>.
 
 <p>
 This directory contains only a limited subset of the total ITK documentation.
 The directory contents include:
 <ul>
-    <li>InsightStart.pdf - retrieving the code, mailing lists, web pages,
-    the basics of compiling.</li>
+    <li>InsightStart.pdf - developers guide to retrieving the code, 
+    mailing lists, web pages, the basics of compiling.</li>
     <li>Installing&Compiling.htm - the basics of compiling ITK on different
     platforms.</li>
 </ul>
@@ -46,10 +46,10 @@ checkout directory (InsightDocuments). While this is not complete, you
 may find useful information (including a coding style document).
 If you would like to access this directory, use the following procedure:
 
-<pre>   cvs -d :pserver:anonymous@public.kitware.com:/insight/cvsroot login</pre>
+<pre>   cvs -d :pserver:anonymous@www.itk.org:/insight/cvsroot login</pre>
 with password "insight"...then get the source/documentation as follows:<br>
 <br>
-<pre>   cvs -d :pserver:anonymous@public.kitware.com:/insight/cvsroot checkout InsightDocuments</pre>
+<pre>   cvs -d :pserver:anonymous@www.itk.org:/insight/cvsroot checkout InsightDocuments</pre>
 
 </body>
 </html>
