ENH:Updated developers list

--- a/README.html
+++ b/README.html
@@ -75,44 +75,61 @@ GE Corporate R&amp;D, Kitware, Inc., and MathSoft (the company name is now
 Insightful); and the three academic partners University of North Carolina
 (UNC), University of Tennessee (UT), and University of Pennsylvania (UPenn).
 The Principle Investigators for these partners were, respectively, Bill
-Lorensen at GE CRD, Will Schroeder at Kitware, Vikram Chalana at Mathsoft,
+Lorensen at GE CRD, Will Schroeder at Kitware, Vikram Chalana at Insightful,
 Stephen Aylward with Luis Ibanez at UNC (Luis is now at Kitware), Ross
 Whitaker with Josh Cates at UT (both now at Utah), and Dimitri Metaxas at
 UPenn. In addition, several subcontractors rounded out the consortium
-including Peter Raitu at Brigham &amp; Women's Hospital, Pat Molholt and
-Celina Imielinska at Columbia University, Jim Gee at UPenn's Grasp Lab, and
+including Peter Raitu at Brigham &amp; Women's Hospital, Celina Imielinska 
+and Pat Molholt at Columbia University, Jim Gee at UPenn's Grasp Lab, and
 George Stetton at University of Pittsburgh.
 <br>
 
 <h3> Who are the developers?</h3>
-The best way to determine the names of developers is to view the CVS source
-code repository logs. Most of the early developers are listed in the following,
-however, many developers beyond those listed here will participate in the
-development of Insight as the code grows and becomes publicly accessible.<br>
+The best way to determine the names of developers is to view the CVS
+source code repository logs. Most of the early developers are listed in
+the following, however, many developers beyond those listed here will
+participate in the development of Insight as the code grows and becomes
+publicly accessible.<br>
 <br>
 Some of the early developers include:<br>
 <ul>
+  <li>Elsa Angelini - Columbia, segmentation algorithms</li>           
+  <li>Brian Avants - UPenn; FEM classes, registration algorithms</li>
   <li> Stephen Aylward - UNC; architecture, algorithms</li>
   <li>Dan Blezek - GE CRD; testing infrastructure</li>
   <li>Josh Cates - Utah; imaging classes and filters</li>
-  <li>Vikram Chalana - Mathsoft (now Insightful); GNATS</li>
-  <li>Bill Hoffman - Kitware; CMake (build process); vxl/vnl numerics; infrastructure
-(smart pointers, object factories, callback mechanism)</li>
+  <li>Ting Chen - UPenn, segmentation algorithms</li>
+  <li>Jeffrey Duda - UPenn; FEM classes, registration algorithms</li>
+  <li>James Gee - UPenn; FEM architecture, registration algorithms</li>
+  <li>Bill Hoffman - Kitware; CMake (build process); vxl/vnl numerics; 
+  infrastructure (smart pointers, object factories, 
+  callback mechanism)</li>
   <li>Paul Hughett - UPenn; quality, algorithms</li>
   <li>Luis Ibanez - UNC (now Kitware); imaging classes and filters</li>
+  <li>Celina Imielinska - Columbia, segmentation algorithms</li>
+  <li>Yinpeng Jin - Columbia, segmentation algorithms</li>
   <li>Brad King - Kitware; Mesh class, autowrapping of C++ code</li>
   <li>Bill Lorensen - GE CRD; testing, requirements, architecture</li>
-  <li>Ken Martin - Kitware; Build process, architecture, infrastructure</li>
-  <li>Jim Miller - GR CRD; Image classes, iterators, pipeline update mechanism</li>
-  <li>Lydia Ng - Mathsoft (now Insightful); Image filters, clustering/segementation algorithms</li>
-  <li>Sayan Pathak &ndash; MathSoft (now Insightful); image clustering/segementation
-algorithms</li>
-  <li>Will Schroeder - Kitware; Mesh classes, documentation, algorithms,
-core classes</li>
-  <li>Damion Shelton - Pittsburgh; BLOX images, spatial filters</li>
+  <li>Ken Martin - Kitware; Build process, architecture, 
+  infrastructure</li>
+  <li>Dimitris Metaxas - UPenn, segmentation algorithms</li>
+  <li>Jim Miller - GE CRD; Image classes, iterators, pipeline update 
+  mechanism</li>
+  <li>Lydia Ng - Mathsoft (now Insightful); Image filters, 
+  clustering/segementation algorithms</li>
+  <li>Aljaz Noe - UPenn; FEM classes</li>
+  <li>Sayan Pathak &ndash; MathSoft (now Insightful); image 
+  clustering/segementation algorithms</li>
+  <li>Will Schroeder - Kitware; architecture, Mesh classes, documentation,
+   algorithms, core classes</li>
+  <li>Marcelo Siqueira - UPenn; FEM classes</li>
   <li>George Stetton - Pittsburgh; image filters, algorithms</li>
+  <li>Tessa Sundaram - UPenn; FEM classes, registration algorithms</li>
+  <li>Jayaram Udupa - Upenn, segmentation algorithms</li>
   <li>Ross Whitaker - Utah; architecture, algorithms</li>
+  <li>Ying Zhuge - UPenn, segmentation algorithms</li>
 </ul>
+
 <h3>How do I participate?</h3>
 Because ITK is an open-source system, you can participate. If you'd like
 to become involved, here are the following steps that you might consider.
@@ -263,9 +280,13 @@ by Matthew H. Austern </li>
   </ol>
 
   <h3>Data</h3>
-  Data is available via anonymous ftp from: 
-  <a href="ftp://public.kitware.com/pub/itk/Data/">
-  ftp://public.kitware.com/pub/itk/Data/</a>.
+  <ul>
+    <li>Data is available via anonymous ftp from: 
+      <a href="ftp://public.kitware.com/pub/itk/Data/">
+      ftp://public.kitware.com/pub/itk/Data/</a>.</li>
+    <li>See also the
+      <a href="http://www.itk.org/HTML/Data.htm">ITK Data web page</a>.</li>
+  </ul>
 
   <h3>Contacts</h3>
   <ul>
