ENH:Added beta information

--- a/README.html
+++ b/README.html
@@ -18,14 +18,15 @@
       <td>
       <h1>An Introduction to the <br>
 Insight Segmentation &amp; Registration Toolkit <br>
+(This is Beta 2, Release 0.7, June 2002)<br>
       </h1>
       <hr align="Left" width="100%" size="2"></td>
     </tr>
   </tbody>
 </table>
 <br>
-Welcome to the National Library of Medicine Insight Segmentation and Registration
-Toolkit (ITK).<br>
+Welcome to the National Library of Medicine 
+Insight Segmentation and Registration Toolkit (ITK).<br>
 <br>
 This document provides a brief description of the project, its history, and
 references to additional information describing how to use, develop, and
