ENH: update to new domain name: vtk.org, paraview.org, itk.org

--- a/README.html
+++ b/README.html
@@ -173,7 +173,7 @@ the toolkit is capable of processing other data types.<br>
  </li>
   <li>The toolkit does not address visualization or graphical user interface.
 These are left to other toolkits (such as 
-<a href="http://public.kitware.com/VTK">VTK</a>, 
+<a href="http://www.vtk.org">VTK</a>, 
 <a href="http://rolle.engr.utk.edu/~vision/vispack/">VisPack</a>, 
 <a href="http://mipgsun.mipg.upenn.edu/~Vnews/">3DViewnix</a>,
 MetaImage, etc.)
