ENH: Now links with the MetaIO pages

--- a/README.html
+++ b/README.html
@@ -176,7 +176,8 @@ These are left to other toolkits (such as
 <a href="http://www.vtk.org">VTK</a>, 
 <a href="http://rolle.engr.utk.edu/~vision/vispack/">VisPack</a>, 
 <a href="http://mipgsun.mipg.upenn.edu/~Vnews/">3DViewnix</a>,
-MetaImage, etc.)
+<a href="http://caddlab.rad.unc.edu/technologies/index.html#metaObjects">
+MetaImage</a>, etc.)
   </li>
   <li> The toolkit provides minimal tools for file interface. Again, this
 is left to other toolkits/libraries to provide. </li>
